# Logeion-agentic-executor

./: .gitignore  CHANGELOG.md  README.md  feedback.md  mygit.bat  mygit.sh  pyproject.toml  tokens.txt
.github/workflows/: publish.yml
agentic_executor/: __init__.py  cli.py  install.py
agentic_executor/code_parts/: commands.py  executor.py
agentic_executor/skills/exec/: skill-cursor.mdc  skill-kiro.md  skill.md
docs/: agentic_executor.md
example/: WALKTHROUGH.md
example/phi_calculator/: __init__.py  calculator.py  formatter.py  main.py  validator.py
tests/: test_cwd_errors.py  test_install.py  test_read_command.py  test_stdin_passthrough.py
