[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-executor"
version = "1.0.0"
description = "High-performance execution layer for AI agents — filesystem, multi-language code analysis, process management"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agent", "claude", "code-analysis", "tree-sitter", "executor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Zero hard dependencies — works out of the box with Python ast fallback
dependencies = []

[project.optional-dependencies]
# Full multi-language tree-sitter support (20+ languages)
languages = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-ruby",
    "tree-sitter-c-sharp",
    "tree-sitter-kotlin",
    "tree-sitter-scala",
    "tree-sitter-php",
    "tree-sitter-swift",
    "tree-sitter-lua",
]

# All optional features bundled
all = [
    "agentic-executor[languages]",
]

[project.scripts]
# Run thoughts from the CLI
agentic-executor = "agentic_executor.cli:main"
# Install the /exec skill into Claude Code, Cursor, Windsurf, etc.
exec-install = "agentic_executor.install:main"

[project.urls]
Homepage = "https://github.com/Logeion/agentic-executor"
Repository = "https://github.com/Logeion/agentic-executor"
Issues = "https://github.com/Logeion/agentic-executor/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentic_executor"]

[tool.hatch.build.targets.wheel.shared-data]
# Nothing here — skill.md lives inside the package, included automatically

[tool.hatch.build.targets.sdist]
include = [
    "agentic_executor/",
    "pyproject.toml",
    "README.md",
    "docs/",
]
